# ProyectoTFG

./: .gitignore  .gitlint  .pre-commit-config.yaml  Prtobf  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
artifact_detector/: meson.build
artifact_detector/examples/: argparse_tool.cpp  feature_extractor_tool.cpp  meson.build  predictor_tool.cpp  test_data_generation_tool.cpp  trainer_tool.cpp  videofile_source_example.cpp
artifact_detector/include/: datasetloader.hpp  datasetpath.hpp  feature_extractor.hpp  logging.hpp  macros.hpp  trainer.hpp  types.hpp  utility.hpp  videofilesink.hpp  videofilesource.hpp
artifact_detector/lib/: datasetloader.cpp  datasetpath.cpp  feature_extractor.cpp  meson.build  trainer.cpp  utility.cpp  videofilesink.cpp  videofilesource.cpp
bitacoras/: Makefile  not_for_human_use.tex  semana_2.tex  semana_3.tex
docs/: Doxyfile.in  meson.build
docs/anteproyecto/: apendice.tex  config.tex  diagramas_de_gantt_y_pert.tex  literatura.bib  main.bbl  main.tex  objetivos.tex  titlepage_licel_es_anteproyecto.tex
docs/bitacoras/: semana_10.tex  semana_2.tex  semana_3.tex  semana_5.tex  semana_6.tex  semana_8.tex  semana_9.tex
docs/dataset/: README.md  videoconferencing.md  walking_tour.md
docs/design/: design.md  feature_extractor_usage_example.md
docs/tesis/: config.tex  intro.tex  literatura.bib  macros.tex  resumen.tex  solucion.tex  teoria.tex
subprojects/: meson.build
subprojects/anteproyecto/: actividades.tex  enfoque_de_la_solucion.tex  entorno_del_proyecto.tex  planteamiento_del_problema.tex  sintesis_del_problema.tex
subprojects/bitacoras/: Makefile  build_worklogs.sh  meson.build  semana_1.tex  semana_10.tex  semana_11.tex  semana_12.tex  semana_13.tex  semana_14.tex  semana_15.tex  semana_4.tex  semana_5.tex  semana_7.tex
subprojects/bitacoras/fig/: meson.build
subprojects/ranger/: meson.build
subprojects/ranger/cpp_version/src/: meson.build
subprojects/ranger/cpp_version/src/Forest/: meson.build
subprojects/ranger/cpp_version/src/Tree/: meson.build
subprojects/ranger/cpp_version/src/extension/: DataChar.h  DataDouble.h  DataFloat.h  ForestProbability.h  ForestRegression.h  ForestSurvival.h  Tree.h  TreeClassification.h  TreeProbability.h  TreeRegression.h  TreeSurvival.h  utility.h
subprojects/ranger/cpp_version/src/utility/: meson.build
subprojects/ranger/src/: ForestProbability.cpp  ForestRegression.cpp  ForestSurvival.cpp
subprojects/tesis/: Makefile  acta_aprob_licel.tex  acta_eval_licel.tex  agradecimientos.tex  apendice.tex  build_thesis.sh  code_blocks.tex  conclusiones.tex  config.tex  dedicatoria.tex  disclaimer.tex  glosario.tex  intro.tex  literatura.bib  macros.tex  main.tex  meson.build  resultados.tex  resumen.tex  solucion.tex  teoria.tex  titlepage_licel_es.tex  todo.txt
subprojects/tesis/fig/: balancer.tikz  block_diagrams_drafts.tikz  datasetgen.tikz  detector_general.tikz  detector_steps.tikz  extractor_steps.tikz  featcalc.tikz  framesetgen.tikz  labeler.tikz  lossy_system.tikz  meson.build  rdf_trainer.tikz  sat.tikz  satuse.tikz  simulator.tikz  synch.tikz  test_file.tikz  trainer.tikz  video_inpainter_general.tikz  video_inpainter_steps.tikz
subprojects/tesis/sty/: tecStyle.sty
tools/: meson.build
tools/bash_tools/: generate_black_white_features.sh  generate_feature_files.sh  generate_ground_truth.sh  train_with_snippets.sh
tools/cpp_tools/: meson.build
tools/cpp_tools/analyzer/: analyzer.cpp  meson.build
tools/cpp_tools/feature_generator/: README.md  buffer_utils.cpp  buffer_utils.h  feature_generator.cpp  meson.build  pipeline.cpp  pipeline.h
tools/cpp_tools/ranger_ext/: ArgumentHandler.cpp  Data.cpp  Data.h  DataFloat.h  Forest.cpp  Forest.h  ForestClassification.cpp  Tree.cpp  Tree.h  main.cpp  meson.build
tools/cpp_tools/trainer/: meson.build  trainer.cpp
tools/python_tools/: README.md  featureextractor.py  features.py  ground_truth.py  parse_images_into_videofile.py  parse_ranger_confusion_matrix.py  parse_readme_into_list.py  parse_snip_spec.py  python_rdf.py  ranger_trainer_and_tester.py  test_cpp_features.py  utilities.py
