feature_extractor_tool_src = [
  'feature_extractor_tool.cpp',
]

executable('feature_extractor_tool',
  feature_extractor_tool_src,
  cpp_args : cpp_args,
  include_directories : [projectinc],
  dependencies : [libartifactdetector_dep],
  install : false,
)

trainer_tool_src = [
  'trainer_tool.cpp',
]

executable('trainer_tool',
  trainer_tool_src,
  cpp_args : cpp_args,
  include_directories : [projectinc],
  dependencies : [libartifactdetector_dep],
  install : false,
)


argparse_tool_src = [
  'argparse_tool.cpp',
]

executable('argparse_tool',
  argparse_tool_src,
  cpp_args : cpp_args,
  include_directories : [projectinc],
  dependencies : [libartifactdetector_dep],
  install : false,
)

predictor_tool_src = [
  'predictor_tool.cpp',
]

executable('predictor_tool',
  predictor_tool_src,
  cpp_args : cpp_args,
  include_directories : [projectinc],
  dependencies : [libartifactdetector_dep],
  install : false,
)

videofile_source_example_src = [
  'videofile_source_example.cpp',
]

executable('videofile_source_example',
  videofile_source_example_src,
  cpp_args : cpp_args,
  include_directories : [projectinc],
  dependencies : [libartifactdetector_dep],
  install : false,
)

