source_files += files([
  # Intro
  'lossy_system.tikz',
  'video_inpainter_general.tikz',
  'video_inpainter_steps.tikz',
  # 2.1 General
  # 2.2 Training
  # 2.2 
  # 3.1 General
  'detector_general.tikz',
  'detector_steps.tikz',
  # 3.2 Training
  'trainer.tikz',
  ## 3.2.1 Dataset Generation
  'datasetgen.tikz',
  'simulator.tikz',
  'framesetgen.tikz',
  'synch.tikz',
  'labeler.tikz',
  # 3.3 Prediction Performance Improvements
  ## 3.3.1 Extractor
  'extractor_steps.tikz',
  'sat.tikz',
  'satuse.tikz',
  'featcalc.tikz',
  ## 3.3.2 Balancer
  'balancer.tikz',
  ## 3.3.3 Grower
  # 'grower.tikz'
  # 3.4 Timing Performance Improvements
  # 3.5 Additional
  ## 3.5.1 RDF Classifier
  # 'classifier.tikz'
  ## 3.5.2 Mask Generator
  # 'masker.tikz'
  
])
