
################################################################################
# Analyzer Tool
#
# This tool provides data on ranger and rangerx forests that may be useful for
# further analysis
################################################################################

executable('analyzer',
          sources             : [ 'analyzer.cpp' ],
          include_directories : [ranger_ext_incdirs, projectinc],
          dependencies        : [rangerx_dep, libartifactdetector_dep])
