
################################################################################
# Trainer Tool
#
# This tools allows the training of rangerx forests
################################################################################

executable('trainer',
          sources             : [ 'trainer.cpp' ],
          include_directories : [ranger_ext_incdirs, projectinc],
          dependencies        : [rangerx_dep, libartifactdetector_dep])
