forest_headers = [
  'ForestClassification.h',
  'Forest.h',
  'ForestProbability.h',
  'ForestRegression.h',
  'ForestSurvival.h',
]

forest_sources = files(
  'ForestClassification.cpp',
  'Forest.cpp',
  'ForestProbability.cpp',
  'ForestRegression.cpp',
  'ForestSurvival.cpp',
)

ext_forest_sources = files(
  # 'ForestClassification.cpp',
  # 'Forest.cpp',
  'ForestProbability.cpp',
  'ForestRegression.cpp',
  'ForestSurvival.cpp',
)