tree_headers = [
  'TreeClassification.h',
  'Tree.h',
  'TreeProbability.h',
  'TreeRegression.h',
  'TreeSurvival.h'
]

tree_sources = files(
  'TreeClassification.cpp',
  'Tree.cpp',
  'TreeProbability.cpp',
  'TreeRegression.cpp',
  'TreeSurvival.cpp'
)

ext_tree_sources = files(
  'TreeClassification.cpp',
  #'Tree.cpp',
  'TreeProbability.cpp',
  'TreeRegression.cpp',
  'TreeSurvival.cpp',
)
